<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">EatAway</string>
    <string name="tui_jian_deng_lu">推荐登陆方式</string>
    <string name="phone_number">请输入手机号</string>
    <string name="ke_fu_re_xian">客服热线</string>
    <string name="wei_xin">微信登陆</string>
    <string name="ti_jiao_ding_dan_title">提交订单</string>
    <string name="tui_dan_zhong">退单中</string>
    <string name="yi_tui_dan">已退单</string>
    <string name="huo_qu_lu_yin_quan_xian">获取权限失败，请手动开启</string>
    <string name="mei_ding_dan">您当前没有任何订单</string>
    <string name="mei_ping_jia">该商铺没有任何评价哦</string>
    <string name="xian_sheng">先生</string>
    <string name="nv_shi">女士</string>
    <string name="qu_xiao_ding_dan">取消订单</string>
    <string name="yong_hu_xie_yi">用户协议</string>
    <string name="qing_xuan_ze_zhi_fu_fang_shi">请选择支付方式</string>
    <string name="mi_ma_chang_du">密码长度不能小于6位</string>
    <string name="yi_shou_wan">已售完</string>
    <string name="fen">份</string>
    <string name="xin_yong_ka">信用卡</string>
    <string name="zhi_fu_bao_zhi_fu">支付宝</string>
    <string name="wei_xin_zhi_fu">微信支付</string>
    <string name="qing_xie_xia_nin_de_kou_wei_bei_zhu">请写下您的口味备注</string>
    <string name="shang_jia_wei_zhi">商家位置</string>
    <string name="you_feng">河北优枫网络科技有限公司</string>
    <string name="ban_ben_hao">版本号</string>
    <string name="qing_shu_ru_que_ren_mi_ma">请输入确认密码</string>
    <string name="wang_ji_mi_ma">忘记密码</string>
    <string name="dian_ci_zhu_ce">点此注册</string>
    <string name="reset_password">重置密码</string>
    <string name="di_san_fang_deng_lu">第三方登陆</string>
    <string name="shang_pin">商品</string>
    <string name="xiang_qing">详情</string>
    <string name="xuan_ze_zhi_fu_fang_shi">选择支付方式</string>
    <string name="shang_jia_ru_zhu">商家入驻</string>
    <string name="di_yi_bu">第一步</string>
    <string name="di_er_bu">第二步</string>
    <string name="di_san_bu">第三步</string>
    <string name="di_si_bu">第四步</string>
    <string name="xia_zai_zhu_ce_EatAway">下载注册EatAway商户端</string>
    <string name="shang_hu_duan_shen_qing_ren_zheng">商户端申请认证</string>
    <string name="deng_dai_ping_tai_ren_yuan">等待平台人员上门认证</string>
    <string name="qian_yue_shang_xian">签约上线</string>
    <string name="xia_zai_shang_jia_duan">下载商家端</string>
    <string name="chao_chu_zui_da_pei_song_ju_li">超出最大配送距离</string>
    <string name="qing_shua_xin_lie_biao">餐馆未营业，请刷新列表重试</string>
    <string name="shang_dian_wei_ying_ye">餐馆未营业,请刷新首页列表</string>
    <string name="xiu_gai_di_zhi">修改地址</string>
    <string name="shan_chu_di_zhi">删除地址</string>
    <string name="chong_zhi_mi_ma">重置密码</string>
    <string name="gai_shou_ji_wei_zhu_ce">该手机号未注册</string>
    <string name="chong_xin_fa_song">重新发送</string>
    <string name="qing_qiu_cheng_gong">请求成功</string>
    <string name="qing_qiu_shi_bai">请求失败</string>
    <string name="ping_jia_cheng_gong">评价成功</string>
    <string name="ping_jia_shi_bai">评价失败</string>
    <string name="dang_qian_ding_dan">当前订单</string>
    <string name="ping_jia_bu_neng_wei_kong">评价不能为空</string>
    <string name="ping_jia">评价</string>
    <string name="ni_ming_ping_jia">匿名评价</string>
    <string name="wei_dao_ru_he">味道如何？服务周到吗？分享一下吧！</string>
    <string name="zong_jin_e">总金额:</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="enter_the_captcha">请输入验证码</string>
    <string name="please_enter_the_cell_phone_number">请输入手机号</string>
    <string name="please_enter_the_password">请输入密码</string>
    <string name="password_again">请再次输入密码</string>
    <string name="click_login">点击登陆</string>
    <string name="release_my">注  册</string>
    <string name="login_my">登  陆</string>
    <string name="read_and_agreed">我已阅读并同意</string>
    <string name="the_terms_of_service">&#060;EatAway服务条款&#062;</string>
    <string name="EN">EN</string>
    <string name="chinese">中</string>
    <string name="get_the_captcha_successfully">获取验证码成功</string>
    <string name="please_enter_the_verification_code">请输入验证码</string>
    <string name="the_password_input_is_inconsistent_twice">两次密码输入不一致</string>
    <string name="please_check_your_network_connection">请检查您的网络连接</string>
    <string name="temporarily_no_data">暂无数据</string>
    <string name="login_failed">登陆失败</string>
    <string name="login_successful">登陆成功</string>
    <string name="validation_fails">验证失败</string>
    <string name="zhu_ce_cheng_gong">注册成功</string>
    <string name="release_failed">注册失败</string>
    <string name="The_phone_number_has_been_registered">该手机号已被注册</string>
    <string name="Enter_empty">输入为空!</string>
    <string name="Format_error">号码格式错误</string>
    <string name="Number_registered">号码已被注册</string>
    <string name="Linked_this_phone_number">该手机号与当前绑定的手机号相同</string>
    <string name="Request_location_permission">申请定位权限，以便获取您的位置</string>
    <string name="Request_Photo_permission">申请定位权限，以便获取您的位置</string>
    <string name="Please_Log_on_again">登陆失效，请重新登录</string>
    <string name="sort_bar_default">默认排序</string>
    <string name="sort_bar_recommend">商家推荐</string>
    <string name="sort_bar_distance">距离最近</string>
    <string name="sort_bar_sale">销量最高</string>
    <string name="search_bar">请输入饭店名称</string>
    <string name="search_cancel">取消</string>
    <string name="user_login_sign_up_default">登陆/注册</string>
    <string name="left_exit">退出登录</string>
    <string name="left_restaurant">美食餐馆</string>
    <string name="left_current_orders">当前订单</string>
    <string name="left_personal_center">个人中心</string>
    <string name="left_custom_service">客服聊天</string>
    <string name="wen_xin_ti_shi">温馨提示</string>
    <string name="zhu_yi">注意</string>
    <string name="qing_zhuan_ren_gong_ke_fu">当您遇到在线客服未回复时，您可以选择右上角拨打人工客服电话</string>
    <string name="fu_wu_shi_jian">我们的服务时间为周一至周五的7:00~21:00，如果您有紧急情况可在个人中心意见反馈留下您的问题，我们会谨慎处理</string>
    <string name="call_version_inconsistent">通话协议版本不一致</string>
    <string name="person_address">收货地址</string>
    <string name="person_order">我的订单</string>
    <string name="person_joinus">商家入驻</string>
    <string name="person_advice">意见反馈</string>
    <string name="person_setting">设置</string>
    <string name="person_share">分享</string>
    <string name="person_share_to">分享到</string>
    <string name="person_share_to_friends">微信好友</string>
    <string name="person_share_to_moments">朋友圈</string>
    <string name="person_share_to_cancel">取消</string>
    <string name="person_aboutus">关于我们</string>
    <string name="person_userinfo">用户信息</string>
    <string name="person_userinfo_phone_change_et">手机号码</string>
    <string name="person_userinfo_phone_change_title">换绑手机</string>
    <string name="person_userinfo_phone_change_tv">输入您要绑定的手机号</string>
    <string name="person_userinfo_phone_change_btn">获取短信验证码</string>
    <string name="person_userinfo_phone_change_input_code">短信验证码已发送到</string>
    <string name="confirm">确认</string>
    <string name="code">验证码</string>
    <string name="send">发送</string>
    <string name="person_resend">重新发送</string>
    <string name="thank_you_for_comments">反馈成功，感谢您提供的宝贵意见</string>
    <string name="content_cannot_be_empty">内容不能为空</string>
    <string name="Publication">发表反馈</string>
    <string name="Give_FeedBack_here">您有什么意见或建议，可在此反馈（如果您是微信或者FaceBook用户,请留下您的联系方式）...</string>
    <string name="Give_FeedBack_unsuccessfully">反馈失败！</string>
    <string name="person_userinfo_changeicon">修改头像</string>
    <string name="person_userinfo_changeusername">修改用户名</string>
    <string name="person_userinfo_changephone">换绑手机号</string>
    <string name="person_userinfo_exit">退出登录</string>
    <string name="change_successfully">修改成功</string>
    <string name="change_unsuccessfully">修改失败</string>
    <string name="user_name">用户名</string>
    <string name="please_enter_your_username">请输入您的用户名</string>
    <string name="person_order_title">我的订单</string>
    <string name="order_order_time">下单时间:</string>
    <string name="zong_ji">总计</string>
    <string name="order_contact_pre">如需退单，请先</string>
    <string name="order_contact_url">联系卖家</string>
    <string name="order_reviews">去评价</string>
    <string name="order_myreviews">已评价</string>
    <string name="order_detail_completion_of_order">订单已完成</string>
    <string name="order_detail_contact_us">如果有什么意见或建议，请点击右上角联系我们</string>
    <string name="Order_details">订单明细</string>
    <string name="delivery_time">送餐时间</string>
    <string name="order_number">订单号</string>
    <string name="delivery_address">收货地址</string>
    <string name="remarks">口味备注</string>
    <string name="other_information">其他信息</string>
    <string name="xia_dan_shi_bai">下单失败</string>
    <string name="xia_dan_cheng_gong">下单成功</string>
    <string name="order_buyagain">再来一单</string>
    <string name="order_waiting_seller">等待卖家接单</string>
    <string name="order_seller_order">卖家已接单</string>
    <string name="order_seller_delivered">卖家已确认送货</string>
    <string name="order_receipt">确认送达</string>
    <string name="order_finish">订单已完成</string>
    <string name="order_delivery_fee">配送费</string>
    <string name="order_distance">距离</string>
    <string name="new_shipping_address">新增收货地址</string>
    <string name="contacts">联系人</string>
    <string name="name">姓名:</string>
    <string name="please_fill_in_the_consignee_name">请输入收货人姓名</string>
    <string name="phone">手机号:</string>
    <string name="shopping_address">收货地址</string>
    <string name="address_community">小区/大厦/学校:</string>
    <string name="jie_dao_di_zhi">街道地址:（选填）</string>
    <string name="click_on_the_select">点击选择</string>
    <string name="address_house">例：3号楼-306</string>
    <string name="save">保存</string>
    <string name="bao_cun_cheng_gong">保存成功</string>
    <string name="save_fall">保存失败</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="settlement">去结算</string>
    <string name="shopping_cart">购物车</string>
    <string name="register_user_info">用户信息</string>
    <string name="register_up">注册</string>
    <string name="register_girl">女</string>
    <string name="register_boy">男</string>
    <string name="register_UserID">UserID不能修改</string>
    <string name="tpl_no_sdcard">sdcard 卡不存在</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="register_key_user_icon">头像:</string>
    <string name="register_key_user_name">昵称:</string>
    <string name="register_key_user_gender">性别:</string>
    <string name="register_key_user_UID">U I D:</string>
    <string name="register_key_user_mail">邮箱:</string>
    <string name="register_key_user_password">密码:</string>
    <string name="delivery">配送费</string>
    <string name="taste_notes">口味备注</string>
    <string name="method_of_payment">支付方式</string>
    <string name="ti_jiao_ding_dan">提交订单</string>
    <string name="please_select_ocation">请选择配送位置</string>
    <string name="the_delivery_time">配送时间:尽快送达</string>
    <string name="the_delivery_time1">配送时间:</string>
    <string name="login_agin">请重新登陆</string>
    <string name="please_choos_address">请选择收货地址</string>
    <string name="guan">管理</string>
    <string name="chao_chu_pei_song">超出配送范围</string>
    <string name="xuan_ze_di_zhi">选择地址</string>
    <string name="xiu_gai_cheng_gong">修改成功</string>
    <string name="xiu_gai_shi_bai">修改失败，请重试</string>
    <string name="mei_you_zhao_dao_xiang_guan">没有找到相关的饭店</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="date_picker_dialog_title">Set date</string>
    <string name="date_time_set">Set</string>
    <string name="date_time_done">Done</string>
    <string name="date_picker_increment_month_button">Increment month</string>
    <string name="date_picker_decrement_month_button">Decrement month</string>
</resources>