<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_line"
    tools:context="com.australia.administrator.australiandelivery.activity.JoinUsActivity">
    <com.australia.administrator.australiandelivery.view.TopBar
        android:id="@+id/tp_join_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_download"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/shape_orange"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/xia_zai_shang_jia_duan"
        android:textColor="@color/white"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tp_join_us"
        android:layout_above="@id/btn_download"
        android:paddingTop="30dp"
        android:paddingLeft="60dp"
        android:paddingRight="40dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
        <ImageView
            android:id="@+id/iv_j1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/img_icon_01"/>
        <TextView
            android:id="@+id/tv_j1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/di_yi_bu"
            android:textColor="@color/text_gray"
            android:layout_toRightOf="@id/iv_j1"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:text="@string/xia_zai_zhu_ce_EatAway"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_j1"
            android:layout_below="@id/tv_j1"/>
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <ImageView
                android:id="@+id/iv_j2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@mipmap/img_icon_01"/>
            <TextView
                android:id="@+id/tv_j2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/di_er_bu"
                android:textColor="@color/text_gray"
                android:layout_toRightOf="@id/iv_j2"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:text="@string/shang_hu_duan_shen_qing_ren_zheng"
                android:textColor="@color/text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_j2"
                android:layout_below="@id/tv_j2"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <ImageView
                android:id="@+id/iv_j3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@mipmap/img_icon_01"/>
            <TextView
                android:id="@+id/tv_j3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/di_san_bu"
                android:textColor="@color/text_gray"
                android:layout_toRightOf="@id/iv_j3"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:text="@string/deng_dai_ping_tai_ren_yuan"
                android:textColor="@color/text_black" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_j3"
                android:layout_below="@id/tv_j3"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">
            <ImageView
                android:id="@+id/iv_j4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:background="@mipmap/img_icon_01"/>
            <TextView
                android:id="@+id/tv_j4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/di_si_bu"
                android:textColor="@color/text_gray"
                android:layout_toRightOf="@id/iv_j4"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:text="@string/qian_yue_shang_xian"
                android:textColor="@color/text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_j4"
                android:layout_below="@id/tv_j4"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
