<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.australia.administrator.australiandelivery.activity.PersonUserInfoPhoneChangeSecondActivity">
    <com.australia.administrator.australiandelivery.view.TopBar
        android:id="@+id/top_bar_phonechange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/person_userinfo_phone_change_input_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>
    <TextView
        android:id="@+id/tv_submit_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0123456789"
        android:textSize="20sp"
        android:gravity="center"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">
        <EditText
            android:id="@+id/et_phone_change_number"
            android:hint="@string/code"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:background="#fff"
            android:paddingLeft="20dp"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/btn_send_again"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/person_resend"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:background="@color/actionBar"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_phone_change_confim"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_person_order_green"/>
</LinearLayout>
